fix set up mailing service, and feeding the templates for a better view

--- a/assets/styles/navbarFooter.scss
+++ b/assets/styles/navbarFooter.scss
@@ -113,6 +113,14 @@ aside {
 
 @media screen and (max-width: 950px) {
   aside {
-    width: 35%;
+    width: 40%;
   }
+  aside .navigation-part ul li a {
+    font-size: 20px;
+  }
+}
+
+.triangle {
+  transform: rotate(180deg);
+  transition: 0.5s ease;
 }
