old things getting completed again

--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -25,3 +25,13 @@
 input {
   color: $dark;
 }
+
+label {
+  color: $dark;
+  font-style: normal;
+  font-weight : normal;
+}
+
+a.btn-danger {
+  font-style: normal;
+}
