--- a/assets/styles/wilfers.scss
+++ b/assets/styles/wilfers.scss
@@ -54,11 +54,9 @@
 
 .wilfer {
     position: relative;
+    box-shadow: 0 5px 5px darken($grey, 20%);
     border-radius: 8px;
     border: 2px solid lighten($primary, 25%);
-    // background-image: url('../images/fond3.jpg');
-    // background-size: cover;
-    // background-repeat: no-repeat;
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(183,154,53,0.8869922969187675) 49%, rgba(183,154,53,0.6993172268907564) 100%);
     .div-heart-icon {
         position: absolute;
@@ -68,10 +66,15 @@
     }
 }
 
-.wilfer-div-text h2,
-.wilfer-div-text p {
-    color: lighten($primary, 50%);
-    text-shadow: 0.5px 0.5px 0px darken($primary, 20%), -0.5px -0.5px 0px darken($primary, 20%);
+.wilfer-div-text a {
+    color: $primary;
+    border: 2px outset darken($primary, 15%);
+    background-color: $light;
+    &:hover {
+        color: $light;
+        border: 2px solid darken($light, 25%);
+        background-color: darken($primary, 15%);
+    }
 }
 
 .wilfer-picture {
