--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -17,6 +17,9 @@
             <a href="{{ path('admin_entertainement_index') }}" class="text-center p-2 w-50 my-2 text-decoration-none">
                 Evènements
             </a>
+            <a href="{{ path('admin_comment_index') }}" class="text-center p-2 w-50 my-2 text-decoration-none">
+                Commentaires
+            </a>
         </div>
     </section>
 
