--- a/templates/admin_entertainement/new.html.twig
+++ b/templates/admin_entertainement/new.html.twig
@@ -6,8 +6,8 @@
     <section class="container pb-5">
         <h1 class="my-5 text-center">Ajouter un nouvel <strong class="text-primary font-italic">évènement</strong></h1>
 
-        {{ include('entertainement/_form.html.twig') }}
+        {{ include('admin_entertainement/_form.html.twig') }}
 
-        <a href="{{ path('admin_entertainement_index') }}" class="btn btn-danger">Retour</a>
+        <a href="{{ path('admin_entertainement_index') }}" class="btn btn-danger">Retour à la liste des évènement</a>
     </section>
 {% endblock %}
