--- a/templates/admin_wilfer/new.html.twig
+++ b/templates/admin_wilfer/new.html.twig
@@ -11,9 +11,7 @@
     <section class="container pb-5">
         <h1 class="text-center py-5">Ajouter un nouveau <strong class="text-primary font-italic">wilfer</strong></h1>
 
-        {{ include('adminWilfer/_form.html.twig') }}
-
-        <a href="{{ path('admin_wilfer_index') }}" class="btn btn-danger mt-3">Retour à la liste des wilfers</a>
+        {{ include('admin_wilfer/_form.html.twig') }}
     </section>
 
 {% endblock %}
