--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -12,8 +12,8 @@
         <div class="background-contact-image"></div>
     </section>
 
-    <section class="section-contact">
-        <h1 class="my-4 text-center">Prendre <span class="text-primary font-italic">contact</span> avec nous</h1>
+    <section class="section-contact container">
+        <h1 class="my-4 text-center h2">Prendre <span class="text-primary font-italic">contact</span> avec nous</h1>
         <div class="form container p-3 mb-5">
             <p>
                 {{ form_start(form) }}
