--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -9,13 +9,13 @@
 {% block body %}
     <section>
         <div class="background-faq-image"></div>
-        <h1 class="text-center my-5 faq-section">Nous répondons à vos <span
+        <h1 class="text-center my-5 faq-section h2">Nous répondons à vos <span
                     class="font-italic text-primary">questions</span> ici</h1>
 
         <div class="container mb-3">
             {% for faq in faqs %}
                 <div class="my-3">
-                    <h3 class="mb-3 text-primary bg-transparent border-0">{{ faq.subject }}</h3>
+                    <h2 class="mb-3 text-primary bg-transparent border-0 h3">{{ faq.subject }}</h2>
                     <p class="m-0 bg-transparent border-0">{{ faq.feedback|raw }}</p>
                 </div>
                 <hr>
