--- a/assets/styles/account.scss
+++ b/assets/styles/account.scss
@@ -1,4 +1,4 @@
-@import 'app';
+@import "app";
 
 .background-account-image {
   background-image: url("../images/wilfer7.jpg");
@@ -9,11 +9,28 @@
   box-shadow: 0 5px 5px darken($grey, 20%);
 }
 
+.section-personnal-infos {
+  background:linear-gradient(
+    135deg,
+    rgba($grey, 1) 0%,
+    rgba(183, 154, 53, 0.6993172268907564) 20%,
+    rgba(183, 154, 53, 0.8869922969187675) 50%,
+    rgba(183, 154, 53, 0.6993172268907564) 75%,
+    rgba($grey, 1) 100%,
+  );
+  box-shadow: 0px 10px 10px darken($grey, 15%);
+}
+
 .wilfer-card {
   border: 2px solid darken($primary, 5%);
   border-radius: 8px;
   box-shadow: 0 5px 5px darken($grey, 20%);
-  background-color: lighten($primary, 5%);
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(183, 154, 53, 0.8869922969187675) 49%,
+    rgba(183, 154, 53, 0.6993172268907564) 100%
+  );
 }
 
 .heart-icon {
@@ -27,13 +44,28 @@
   .div-heart-icon {
     position: absolute;
     top: -15px;
-    right: -15px
+    right: -15px;
   }
 }
 
 .wilfer-picture {
-  max-width: 170px;
-  max-height: 200px;
+  width: 170px;
+  height: 200px;
+  object-fit: cover;
   border: 2px solid darken($primary, 5%);
   border-radius: 8px;
+}
+
+a.wilfer-card-btn, 
+button.submit-btn {
+  color: $primary;
+  border: 2px solid darken($primary, 15%);
+  background-color: $light;
+}
+
+a.wilfer-card-btn:hover,
+button.submit-btn:hover {
+  color: $light;
+  border: 2px solid darken($light, 25%);
+  background-color: darken($primary, 15%);
 }
