--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -4,8 +4,10 @@ $dark: #000000;
 $grey: #E5E5E5;
 
 $primary: #B79A35;
-$secondary: darken($grey, 50%);
+$secondary: darken($grey, 20%);
 
 $text-font: 'Baskerville', sans-serif;
 $title-font: 'Playfair Display', serif;
 $logo-font: 'Playfair Display', serif;
+
+$font-size: 20px;
