--- a/templates/includes/_navbar.html.twig
+++ b/templates/includes/_navbar.html.twig
@@ -1,62 +1,10 @@
 {% block stylesheets %}
 	{{ encore_entry_link_tags('navfoot') }}
 {% endblock %}
-{# <nav class="navbar navbar-expand-xl navbar navbar-dark bg-dark shadow p-2 d-flex flex-lg-row flex-column">
-	<div class="w-100 text-center text-xl-left">
-		<a class="navbar-brand nav-link mr-0" href="{{ path('home') }}">
-			<h4>
-				<span class="text-primary font-italic">WILFER</span>
-				AGENCY</h4>
-		</a>
-	</div>
-
-	<div class="w-100 text-left">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	</div>
-
-	<div class="collapse navbar-collapse w-100 text-left" id="navbarNav">
-		<ul class="navbar-nav ml-auto">
-			<li class="nav-item pr-3">
-				<a class="nav-link text-light" href="{{ path("wilfers") }}">Catalogue</a>
-			</li>
-			<li class="nav-item pr-3">
-				<a class="nav-link text-light" href="{{ path("contact") }}">Contact</a>
-			</li>
-			<li class="nav-item pr-3">
-				<a class="nav-link text-light" href="{{ path("faq") }}">F.A.Q</a>
-			</li>
-			<li class="nav-item dropdown pr-3">
-				<a class="nav-link dropdown-toggle pt-1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					{% if app.user %}
-						<img src="{{ asset('build/images/user.ico') }}" alt="logo user" class="p-1 logo-user-admin bg-primary">
-					{% else %}
-						<img src="{{ asset('build/images/user.ico') }}" alt="logo user" class="p-1 logo-user-admin bg-dark">
-					{% endif %}
-				</a>
-				<div class="dropdown-menu dropdown-menu-right">
-					{% if app.user %}
-						<a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a>
-						{% if is_granted("ROLE_ADMIN") %}
-							<a class="dropdown-item" href="{{ path('admin_dashboard') }}">Espace Admin</a>
-						{% else %}
-							<a class="dropdown-item" href="{{ path('account') }}">Mon compte</a>
-						{% endif %}
-					{% else %}
-						<a class="dropdown-item" href="{{ path('app_login') }}">Se connecter</a>
-						<a class="dropdown-item" href="{{ path('app_register') }}">Créer un compte</a>
-					{% endif %}
-				</div>
-			</li>
-		</ul>
-	</div>
-</nav> #}
-
 <header>
 	<div class="container logo-part text-light py-4 px-0">
 		<img id="logo-gentleman" src="{{ asset('build/images/gtl2.png') }}" alt="">
-		<a href="/" class="text-light h1">
+		<a href="/" class="text-light h2">
 			<span class="text-primary">WILFER
 			</span>AGENCY</a>
 	</div>
@@ -88,7 +36,7 @@
 							{% if is_granted("ROLE_ADMIN") %}
 								<a class="item-dropdown text-dark" href="{{ path('admin_dashboard') }}">Espace Admin</a>
 							{% else %}
-								<a class="item-dropdown text-dark" href="{{ path('account') }}">Mon compte</a>
+								<a class="item-dropdown text-dark" href="{{ path('account', {'id': app.user.id }) }}">Mon compte</a>
 							{% endif %}
 						{% else %}
 							<a class="item-dropdown text-dark" href="{{ path('app_login') }}">Se connecter</a>
