--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -6,20 +6,31 @@
 
 {% block body %}
 	<div class="background-account-image"></div>
-	<section class="container pb-5 px-0">
 		<h1 class="text-center py-5">Bienvenue sur
 			<span class="text-primary">votre espace</span>
 			personnel</h1>
+	<section class="section-personnal-infos">
+		<div class="container px-0 py-5">
+			<h2>Vos <strong class="text-light font-italic mb-4">informations</strong> personnels :</h2>
+			<hr>
+			{{ form_start(formUser) }}
+			{{ form_widget(formUser) }}
+			<button type="submit" class="btn submit-btn mt-2">Enregistrer</button>
+			{{ form_end(formUser) }}
+		</div>
+	</section>
 
+	<section class="container py-5 px-0">
 		<h2 class="text-lg-left text-center">Vos
 			<strong class="text-primary font-italic mb-4">Wilfers</strong>
 			préférés :</h2>
+			<hr>
 		<div class="d-flex flex-wrap justify-content-lg-between justify-content-center">
 			{% for favoritesWilfer in app.user.favoritesWilfers %}
 				<div class="wilfer-card  p-0 my-3 col-lg-5 col-10 d-flex">
 					<div class="div-heart-icon">
 						{% if app.user %}
-							<a href="{{ path("wilfer_favorites", {id: favoritesWilfer.id}) }}">
+							<a id="favoritesWilfers" href="{{ path("wilfer_favorites", {id: favoritesWilfer.id}) }}">
 								{% if app.user.isInFavoritesWilfer(favoritesWilfer) == true %}
 									<img src="{{ asset('build/images/full-heart.jpg') }}" class="heart-icon">
 								{% else %}
@@ -28,9 +39,14 @@
 							</a>
 						{% endif %}
 					</div>
-					<div class="d-flex justify-content-center align-items-center m-2">
-						<img src="{{ asset('uploads/' ~ favoritesWilfer.picture) }}" alt="" class="rounded wilfer-picture">
-					</div>
+					
+					{% if (favoritesWilfer.wilferImages | length) > 0 %}
+						<div class="d-flex justify-content-center align-items-center m-2">
+							<img src="{{ asset('uploads/wilfersImages/' ~ favoritesWilfer.wilferImages[0].name) }}" alt="" class="rounded wilfer-picture">
+						</div>
+					{% else %}
+						<img src="" alt="" class="rounded wilfer-picture">
+					{% endif %}
 					<div class="d-flex flex-column justify-content-around p-2">
 						<p class="mb-2 text-dark h3">{{ favoritesWilfer.firstname }}
 							<span class="text-light">{{ favoritesWilfer.lastname }}</span>
@@ -42,7 +58,7 @@
 							<br>
 							"<span class="font-italic font-weight-bold text-light">{{ favoritesWilfer.Description }}</span>"
 						</p>
-
+						<a class="btn wilfer-card-btn" href="{{ path('wilfer_id_show', {'id': favoritesWilfer.id}) }}" style="width:auto;">En savoir plus</a>
 					</div>
 				</div>
 			{% else %}
@@ -55,4 +71,27 @@
 			{% endfor %}
 		</div>
 	</section>
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+
+<script>
+	let btnToFavorites = document.querySelectorAll("#favoritesWilfers")
+	
+	btnToFavorites.forEach(element => {
+		element.addEventListener('click', addToFavoritesWilfers);
+	});
+	
+	function addToFavoritesWilfers(event) {
+		event.preventDefault();
+		fetch(this.getAttribute('href'))
+
+		if (event.currentTarget.firstElementChild.getAttribute('src') == "{{ asset('build/images/full-heart.jpg') }}") {
+			event.currentTarget.firstElementChild.setAttribute('src', "{{ asset('build/images/empty-heart.jpg') }}")
+		} else {
+			event.currentTarget.firstElementChild.setAttribute('src', "{{ asset('build/images/full-heart.jpg') }}")
+		}
+	}
+</script>
 {% endblock %}
