--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,11 +16,11 @@
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
 
-            {% if app.user %}
+            {# {% if app.user %}
                 <div class="mb-3">
                     You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
                 </div>
-            {% endif %}
+            {% endif %} #}
 
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" required autofocus>
@@ -44,6 +44,7 @@
             <button class="btn btn-primary" type="submit">
                 Enregistrer
             </button>
+            <a href="{{ path('app_register') }}" class="mr-2 btn btn-light">Créer un compte</a>
         </div>
 
         </form>
