--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,10 +1,11 @@
 $light: #ffffff;
-$dark: #000000;
+$dark: #020024;
 
 $grey: #E5E5E5;
 
 $primary: #B79A35;
-$secondary: darken($grey, 20%);
+$secondary: darken($primary, 20%);
+$info: lighten($primary, 30%);
 
 $text-font: 'Baskerville', sans-serif;
 $title-font: 'Playfair Display', serif;
