--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -21,7 +21,9 @@
             {{ form_row(registrationForm.plainPassword, {
                 label: 'Mot de passe'
             }) }}
-            {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_row(registrationForm.agreeTerms, {
+                label: 'Accepter les termes'
+            }) }}
             <div class="btn-form">
                 <button class="btn btn-primary" type="submit">
                     Enregistrer
